# jobs_linkedin

./: .gitignore  README.md  pyproject.toml
src/jobs_linkedin/: crew.py  main.py
src/jobs_linkedin/config/: agents.yaml  tasks.yaml
src/jobs_linkedin/tools/: client.py  driver.py  linkedin.py
